fixed z-index for tools and projects container

--- a/index.css
+++ b/index.css
@@ -304,6 +304,15 @@ html, body {
     transform: rotateY(0deg) scale(1.1);
     transform: translateY(-50px);
 }
+.projectOne:hover{
+    z-index: 1;
+}
+.projectTwo:hover{
+    z-index: 1;
+}
+.projectThree:hover{
+    z-index: 1;
+}
 .projectOne:hover ~ .projectTwo{
     position: relative;
     left: 15%;
@@ -387,6 +396,10 @@ html, body {
     -webkit-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
 
+}
+
+.toolsContent:hover {
+    z-index: 1;
 }
 
 .toolsContainer > img {
